--- a/htdocs/treemap.html
+++ b/htdocs/treemap.html
@@ -8,7 +8,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="css/docs.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
     <script src="js/d3.v2.js"></script>
   </head>
 
